Updated the TOS link to BN's TOS and fixed the presentation issue on Safari (COVID-32)

--- a/angular/src/app/discovery/discovery-beacon/discovery-beacon.component.scss
+++ b/angular/src/app/discovery/discovery-beacon/discovery-beacon.component.scss
@@ -43,6 +43,13 @@ ddaplib-header ddaplib-header-add-btn {
   right: 0;
 }
 
+.data-table-container {
+  ag-grid-angular {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .beacon-search-parameters {
   display: flex;
   flex-direction: row;
